# Nanaz

./: .gitignore  README.md  README.zh-CN.md
Payload_Type/nanaz/: .dockerignore  Dockerfile  main.py
Payload_Type/nanaz/nanaz/agent_code/: .gitignore  Cargo.toml  build.rs  config.example.json  config.json
Payload_Type/nanaz/nanaz/agent_code/scripts/: generator_key.py  init.rs
Payload_Type/nanaz/nanaz/agent_code/src/: agent.rs  auxiliary.rs  config.rs  dispatch.rs  error.rs  interactive.rs  main.rs  mythic.rs  p2p.rs  p2p_tcp.rs  protocol_pump.rs  rpfwd.rs  socks.rs  streams.rs  tasks.rs  worker.rs
Payload_Type/nanaz/nanaz/agent_code/src/c2/: http.rs  mod.rs
Payload_Type/nanaz/nanaz/agent_code/src/commands/: cat.rs  cd.rs  cp.rs  download.rs  drives.rs  env.rs  execute_assembly.rs  exit.rs  help.rs  kill.rs  ls.rs  mkdir.rs  mv.rs  netstat.rs  powerpick.rs  process.rs  ps.rs  pwd.rs  resolve.rs  rm.rs  rpfwd.rs  shell.rs  sleep.rs  sysinfo.rs  upload.rs  wget.rs  whoami.rs
Payload_Type/nanaz/nanaz/agent_code/src/common/: base64.rs  cwd.rs  mod.rs  pathguard.rs
Payload_Type/nanaz/nanaz/agent_code/src/models/: mod.rs
Payload_Type/nanaz/nanaz/agent_code/src/sys/: encoding.rs  http.rs  metadata.rs  mod.rs
Payload_Type/nanaz/nanaz/agent_code/src/sys/http/: n_minreq.rs  n_ureq.rs
Payload_Type/nanaz/nanaz/agent_code/src/sys/network/: http_minreq.rs  http_ureq.rs  mod.rs
Payload_Type/nanaz/nanaz/agent_code/src/tasks/: cat.rs  cp.rs  download.rs  env.rs  exit.rs  ls.rs  mv.rs  netstat.rs  ps.rs  resolve.rs  rm.rs  run_bof.rs  run_dll.rs  shell.rs  sleep.rs  sysinfo.rs  upload.rs  wget.rs  whoami.rs
Payload_Type/nanaz/nanaz/mythic/: __init__.py
Payload_Type/nanaz/nanaz/mythic/agent_functions/: _base.py  bash.py  builder.py  cat.py  cd.py  cmd.py  cp.py  download.py  drives.py  env.py  execute.py  execute_assembly.py  exit.py  help.py  kill.py  ls.py  mkdir.py  mv.py  netstat.py  powerpick.py  powershell.py  ps.py  pty.py  pwd.py  resolve.py  rm.py  rpfwd.py  sh.py  shell.py  sleep.py  socks.py  sysinfo.py  tree.py  upload.py  wget.py  whoami.py
Payload_Type/nanaz/nanaz/mythic/browser_scripts/: ls_new.js  ps_new.js
scripts/: clear_process_browser_filter.py  clear_process_browser_filter.sh
