[package]
name = "nanaz"
version = "0.1.0"
edition = "2024"

[dependencies]
mythic-c2 = "0.2.1"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23", features = ["serde", "v4"] }
serde_json = "1.0.150"
ureq = { version = "2.9", features = ["tls"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
base64 = "0.22"
encoding_rs = "0.8"

[profile.dev]
opt-level = 3          # 关键修改：从 "z" 改为 3，开启极致速度优化（计算大素数快数倍）
lto = "fat"            # 开启全局胖链接优化，跨 crate 优化性能最强
codegen-units = 1      # 限制编译单元为 1，让编译器能做更激进的全局优化
# panic = "abort"        # 发生 panic 时直接终止，去掉异常展开代码，减小体积
strip = "symbols"      # 剥离所有符号信息，大幅减小最终固件体积
debug = false          # 关闭调试信息，减小体积
incremental = false    # 关闭增量编译，确保编译器进行最彻底的全局优化


[profile.release]
opt-level = 3          # 关键修改：从 "z" 改为 3，开启极致速度优化（计算大素数快数倍）
lto = "fat"            # 开启全局胖链接优化，跨 crate 优化性能最强
codegen-units = 1      # 限制编译单元为 1，让编译器能做更激进的全局优化
# panic = "abort"        # 发生 panic 时直接终止，去掉异常展开代码，减小体积
strip = "symbols"      # 剥离所有符号信息，大幅减小最终固件体积
debug = false          # 关闭调试信息，减小体积
incremental = false    # 关闭增量编译，确保编译器进行最彻底的全局优化
